[package]
name = "telegram-typings"
version = "3.5.1"
authors = ["Sergey Sova <i.am@lestad.net>"]
license = "MIT"
description = "Structs represents telegram bot typings"
repository = "https://github.com/sergeysova/telegram-typings.git"
documentation = "https://docs.rs/telegram-typings"

[dependencies]
serde_derive = "1.0.26"
serde = "1.0.26"
