[package]
name = "telegram-typings"
version = "3.6.1"
authors = ["Sergey Sova <i.am@lestad.net>"]
license = "MIT"
description = "Structs represents telegram bot typings"
repository = "https://github.com/sergeysova/telegram-typings.git"
documentation = "https://docs.rs/telegram-typings"
categories = ["data-structures"]

[dependencies]
serde_derive = "1.0.26"
serde = "1.0.26"
